--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "author": "Jeff Wear <jeff@mixmax.com> (https://mixmax.com)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "denodeify": "^1.2.1",
+    "jasmine": "^2.4.1",
+    "mock-fs": "^3.11.0"
+  },
+  "dependencies": {
+    "ncp": "^2.0.0",
+  }
 }
