--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "init-files",
+  "name": "install-files",
   "version": "1.0.0",
   "description": "",
-  "bin": "bin/init-files.js",
+  "bin": "bin/install-files.js",
   "main": "src/index.js",
   "scripts": {
     "test": "jasmine"
