--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "ncp": "^2.0.0",
     "stream-to-string": "^1.1.0",
     "yargs": "^4.8.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://github.com/mixmaxhq/install-files.git"
   }
 }
